@@ -1,3 +1,7 @@
+2010-08-02  Bruno Haible  <bruno@clisp.org>
+
+	* realelem.d (ffloat_uint32_equal, dfloat_uint32_equal): New functions.
+
 2010-08-02  Sam Steingold  <sds@gnu.org>
 
 	* predtype.d (elt_compare_t): add a typedef
